configure swagger
